--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@tanstack/react-query-devtools": "^5.74.6",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "gatsby": "^5.14.1",
     "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
@@ -27,15 +33,22 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-source-shopify": "^10.0.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "lucide-react": "^0.503.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.3.3"
   }
 }
