--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.11.0",
     "gatsby": "^5.14.1",
     "gatsby-plugin-google-gtag": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
@@ -34,6 +35,7 @@
     "gatsby-source-shopify": "^10.0.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "lucide-react": "^0.503.0",
+    "motion": "^12.11.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
@@ -41,7 +43,8 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
